# Scryshot

./: .gitignore  .gitmodules  CONTEXT.md  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle.kts
.scratch/ingestion/issues/: 01-ingestion-type-contracts.md  03-repository-is-known-seam.md
.scratch/zvec-phase1/: PRD.md
.scratch/zvec-phase1/issues/: 06-single-vector-query.md
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/schemas/io.github.tzhvh.scryernext.persistence.ScreenshotDatabase/: 4.json
app/schemas/org.mozilla.scryer.persistence.ScreenshotDatabase/: 2.json  3.json
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ic_launcher_placeholder_fg.xml
app/src/main/res/layout/: activity_detail_page.xml  activity_main.xml  activity_sorting_panel.xml  fragment_collection.xml  fragment_full_text_search.xml  fragment_home.xml  item_collection.xml  view_sorting_panel.xml  view_welcome.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: app.xml  preference_keys.xml  strings.xml  (+1 more)
app/src/main/res/values-in/: strings.xml
buildSrc/src/main/java/: Dependencies.kt
docs/: ZVEC_PHASE0.md  ZVEC_ROADMAP.md
gradle/: libs.versions.toml
zvec-android/: .gitignore  README.md  build.gradle.kts  consumer-rules.pro
zvec-android/scripts/: build_libzvec.sh
zvec-android/src/main/cpp/: CMakeLists.txt  zvec_jni_collection.cc  zvec_jni_config.cc  zvec_jni_doc.cc  zvec_jni_marshalling.h  zvec_jni_onload.cc  zvec_jni_schema.cc
(+215 files in other folders)
